--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div class="hero-body">
         <iframe width="900" height="507" src="https://www.youtube.com/embed/fd1an-Zt0q0" title="YouTube video player"
           frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; loop"
           allowfullscreen></iframe>
 
         <h2 class="subtitle has-text-centered">
