--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
   <section class="hero teaser">
     <div class="container is-max-desktop">
       <div class="hero-body">
-        <iframe width="900" height="507" src="https://www.youtube.com/embed/fd1an-Zt0q0" title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; loop"
+        <iframe width="900" height="507" src="https://www.youtube.com/embed/fd1an-Zt0q0&loop=1&playlist=fd1an-Zt0q0"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
 
         <h2 class="subtitle has-text-centered">
