--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
               <span class="author-block"><sup>2</sup>Adobe Research</span>
               <span class="author-block"><sup>3</sup>Google Research</span>
             </div>
+            <h1 style="font-size:24px;font-weight:bold">CVPR 2022 (Oral)</h1>
 
             <div class="column has-text-centered">
               <div class="publication-links">
@@ -84,7 +85,8 @@
   <section class="hero teaser">
     <div class="container is-max-desktop">
       <div class="hero-body">
-        <iframe width="900" height="507" src="https://www.youtube.com/embed/fd1an-Zt0q0&loop=1&playlist=fd1an-Zt0q0"
+        <iframe width="900" height="507"
+          src="https://www.youtube.com/embed/fd1an-Zt0q0?rel=0?version=3&loop=1&playlist=fd1an-Zt0q0"
           title="YouTube video player" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
