fix web layout on mobile devices

--- a/index.html
+++ b/index.html
@@ -84,9 +84,8 @@
 
   <section class="hero teaser">
     <div class="container is-max-desktop">
-      <div class="hero-body">
-        <iframe width="900" height="507"
-          src="https://www.youtube.com/embed/fd1an-Zt0q0?rel=0?version=3&loop=1&playlist=fd1an-Zt0q0"
+      <div class="publication-video">
+        <iframe src="https://www.youtube.com/embed/fd1an-Zt0q0?rel=0?version=3&loop=1&playlist=fd1an-Zt0q0"
           title="YouTube video player" frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
