fix web layout on mobile devices

--- a/index.html
+++ b/index.html
@@ -83,19 +83,22 @@
   </section>
 
   <section class="hero teaser">
-    <div class="container is-max-desktop">
-      <div class="publication-video">
-        <iframe src="https://www.youtube.com/embed/fd1an-Zt0q0?rel=0?version=3&loop=1&playlist=fd1an-Zt0q0"
-          title="YouTube video player" frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-three-fifths">
+        <div class="publication-video">
+          <iframe src="https://www.youtube.com/embed/fd1an-Zt0q0?rel=0?version=3&loop=1&playlist=fd1an-Zt0q0"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+        </div>
+        <h2 class="subtitle has-text-centered">
+          <span class="dnerf">IRON</span> turns multi-view photometric images of real objects into 3D assets in the form
+          of meshes and
+          material textures that can be rendered by existing graphic renderers; objects lit by spotlight or animated are
+          digitalized real objects, while others are created by 3D artists. (Best viewed in HD)
+        </h2>
       </div>
-      <h2 class="subtitle has-text-centered">
-        <span class="dnerf">IRON</span> turns multi-view photometric images of real objects into 3D assets in the form
-        of meshes and
-        material textures that can be rendered by existing graphic renderers; objects lit by spotlight or animated are
-        digitalized real objects, while others are created by 3D artists. (Best viewed in HD)
-      </h2>
+
     </div>
   </section>
 
