add paper and supp

--- a/index.html
+++ b/index.html
@@ -66,13 +66,31 @@
                     <span>arXiv</span>
                   </a>
                 </span>
+                <span class="link-block">
+                  <a href="https://drive.google.com/file/d/1WWvnvlcD1qrkks9duragwjNA1NU7eRqb/view?usp=sharing"
+                    class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="ai ai-arxiv"></i>
+                    </span>
+                    <span>Paper</span>
+                  </a>
+                </span>
+                <span class="link-block">
+                  <a href="https://drive.google.com/file/d/1WWSF697V3saUK3mnoDsxYwLuxTp-XTjg/view?usp=sharing"
+                    class="external-link button is-normal is-rounded is-dark">
+                    <span class="icon">
+                      <i class="ai ai-arxiv"></i>
+                    </span>
+                    <span>Supplementary</span>
+                  </a>
+                </span>
                 <!-- Code Link. -->
                 <span class="link-block">
                   <a href="" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
-                    <span>Code</span>
+                    <span>Code & Data (coming)</span>
                   </a>
                 </span>
               </div>
