--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
             In practice, photometric images can be captured by a hand-held smartphone camera with LED flashlight turned
             on in a
             dark
-            environment.
+            environment. The auto-exposure, auto-white balance, auto white balance should all be turned off. Usually,
+            ~200 images should suffice for high-quality results.
           </p>
         </div>
       </div>
