--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-three-fifths">
         <div class="publication-video">
-          <iframe src="https://www.youtube.com/embed/fd1an-Zt0q0?rel=0?version=3&loop=1&playlist=fd1an-Zt0q0"
+          <iframe src="https://www.youtube.com/embed/EUk-GaUgGx8?rel=0?version=3&loop=1&playlist=EUk-GaUgGx8"
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
