--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <a href="https://www.cs.cornell.edu/~zl548/">Zhengqi Li</a><sup>3</sup>,
               </span>
               <span class="author-block">
-                <a href="https://www.cs.cornell.edu/~snavely/">Noah Snavely</a><sup>1</sup>,
+                <a href="https://www.cs.cornell.edu/~snavely/">Noah Snavely</a><sup>1</sup>
               </span>
             </div>
 
@@ -169,7 +169,7 @@
             In practice, photometric images can be captured by a hand-held smartphone camera with LED flashlight turned
             on in a
             dark
-            environment. The auto-exposure, auto-white balance, auto white balance should all be turned off. Usually,
+            environment. The auto-exposure, auto-white balance, auto-focus should all be turned off. Usually,
             ~200 images should suffice for high-quality results.
           </p>
         </div>
