--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
                 </span>
                 <!-- Code Link. -->
                 <span class="link-block">
-                  <a href="" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://github.com/Kai-46/IRON" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
-                    <span>Code & Data (coming)</span>
+                    <span>Code & Data</span>
                   </a>
                 </span>
               </div>
